cursive-bootstrap/tests/ui/E-SEM/E-SEM-2806.cursive
// RUN: compile-fail
// DIAG: E-SEM-2806
// SPEC: 8.17
// DESC: @result used outside postcondition

procedure bad_result(x: i32) -> i32
    |= @result > 0  //~ ERROR E-SEM-2806: @result outside postcondition
{
    return x
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
